[package]
name = "WordCloudRust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "wordcloud"
path = "src/main.rs"

[dependencies]
rayon = "1.6.1"
svg = "0.13.0"
image = "0.24.5"
edge-detection = "0.2.6"
rand = { version = "0.8.5", features = ["small_rng"] }
parking_lot = "0.12.1"
quadtree_rs = { git = "https://github.com/tooxo/quadtree.git"}
# quadtree_rs = { path = "../quadtree" }
num-traits = "0.2.15"
swash = "0.1.6"
itertools = "0.10.5"
base64 = "0.21.0"
unicode-script = "0.5.5"
