[package]
name = "wordcloud"
description = ""
homepage = "https://github.com/tooxo/wordcloud"
documentation = ""
repository = "https://github.com/tooxo/wordcloud"
readme = "Readme.md"
version = "0.1.0"
edition = "2021"
license = "Mozilla Public License 2.0"
categories = ["wordcloud"]
keywords = ["wordcloud", "text", "visualization"]
exclude = [
    ".fleet/",
    ".github/",
    "debug/",
    "target/",
    ".idea/",
    ".git/"
]

[features]
default = ["stopwords", "woff2", "rust-woff"]
stopwords = ["include_dir"]

[[example]]
name = "example"
path = "example/main.rs"

[lib]
name = "wordcloud"
path = "src/lib.rs"
doctest = false

[dependencies]
rayon = "1.6.1"
svg = "0.13.0"
image = "0.24.5"
edge-detection = "0.2.6"
rand = { version = "0.8.5", features = ["small_rng"] }
parking_lot = "0.12.1"
quadtree_rs = { version = "*", git = "https://github.com/tooxo/quadtree.git" }
num-traits = "0.2.15"
swash = "0.1.6"
itertools = "0.10.5"
base64 = "0.21.0"
unicode-script = "0.5.5"
woff2 = { version = "0.3.0", optional = true }
rust-woff = { version = "*", git = "https://github.com/eratou/rust-woff.git", optional = true }
include_dir = { version = "0.7.3", features = ["glob"], optional = true }

[profile.profiler]
inherits = "release"
debug = 1
