[package]
name = "rs-wordcloud"
description = "☁ Flexible WordCloud implementation for ⚙Rust"
homepage = "https://github.com/tooxo/wordcloud"
documentation = "https://docs.rs/rs-wordcloud"
repository = "https://github.com/tooxo/wordcloud"
readme = "Readme.md"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
categories = ["wordcloud"]
keywords = ["wordcloud", "text", "visualization"]
exclude = [
    ".fleet/",
    ".github/",
    "debug/",
    "target/",
    ".idea/",
    ".git/"
]

[features]
default = ["stopwords", "woff2", "background_image"]
stopwords = ["include_dir"]
background_image = ["image", "edge-detection"]

[[example]]
name = "example"
path = "example/main.rs"

[lib]
name = "wordcloud"
path = "src/lib.rs"
doctest = false

[dependencies]
rayon = "1.6.1"
svg = "0.14.0"
image = { version = "0.24.5", optional = true }
edge-detection = { version = "0.2.6", optional = true }
rand = { version = "0.8.5", features = ["small_rng"] }
parking_lot = "0.12.1"
quadtree_rs = "0.1.3"
num-traits = "0.2.15"
swash = "0.1.6"
itertools = "0.12.0"
base64 = "0.21.2"
unicode-script = "0.5.5"
woff2 = { version = "0.3.0", optional = true }
rs-woff = "0.1.0"
include_dir = { version = "0.7.3", features = ["glob"], optional = true }

[profile.profiler]
inherits = "release"
debug = 1
